# tragus

./: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/tragus/: Cargo.toml
crates/tragus-bluetooth/: Cargo.toml
crates/tragus-bluetooth/src/: att_loop.rs  att_session.rs  command_loop.rs  daemon.rs  discovery.rs  event.rs  framing.rs  handshake.rs  lib.rs  read_loop.rs
crates/tragus-protocol/: Cargo.toml
crates/tragus-protocol/src/: att.rs  battery.rs  channel.rs  control_command.rs  crypto.rs  ear_detection.rs  error.rs  feature_flags.rs  frame.rs  head_tracking.rs  hearing_aid_settings.rs  lib.rs  notifications.rs  proximity.rs  rename.rs  transparency.rs
crates/tragus/src/: bridge.rs  daemon_thread.rs  fake.rs  main.rs  media_state.rs  model.rs  mpris.rs  window.rs
crates/tragus/src/state/: imp.rs  mod.rs
data/: README.md  me.spaceinbox.tragus.desktop  me.spaceinbox.tragus.metainfo.xml
flatpak/: me.spaceinbox.tragus.yaml
