[package]
name = "tragus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native GNOME app for managing AirPods on Linux"
default-run = "tragus"

[[bin]]
name = "tragus"
path = "src/main.rs"

[dependencies]
tragus-protocol = { path = "../tragus-protocol" }
tragus-bluetooth = { path = "../tragus-bluetooth" }
gtk = { package = "gtk4", version = "0.11", features = ["v4_14"] }
adw = { package = "libadwaita", version = "0.9", features = ["v1_5"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
async-channel = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
