[package]
name = "tragus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Native GNOME app for managing AirPods on Linux"
default-run = "tragus"

[[bin]]
name = "tragus"
path = "src/main.rs"

[dependencies]
tragus-protocol = { path = "../tragus-protocol" }
tragus-bluetooth = { path = "../tragus-bluetooth" }
gtk = { package = "gtk4", version = "0.11.2", features = ["v4_18"] }
adw = { package = "libadwaita", version = "0.9.1", features = ["v1_8"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync"] }
async-channel = "2.5.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
